daemonset: always pull container proxy for updates
use imagePullPolicy: Always to check if exist newer
automation-proxy container

--- a/docker_build/daemonset.yaml
+++ b/docker_build/daemonset.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
       - name: automation-proxy
         image: gcr.io/anyvision-training/automation-proxy:master
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         # command: ["/usr/sbin/sshd"]
         # args: ["-D","-e"]
         # command: ["sleep"]
