--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 log_cli = True
 log_cli_level = INFO
-log_cli_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
+log_cli_format = %(asctime)15.15s %(threadName)-10.10s %(levelname)-6.6s %(message)-75s %(funcName)-15.15s %(pathname)-70s:%(lineno)4d
 log_cli_date_format=%Y-%m-%d %H:%M:%S
 
 log_file = output.log
