Add infrastructure requirements and update docker local
1. Added pyexecjs library to infrastructure requirements to be able to execute nodejs with help of python
2. Added installation of nodejs 10.x to docker local file

--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -23,7 +23,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
   && ln -s /usr/bin/python3 /usr/local/bin/python \
   && pip3 install --upgrade pip \
-  && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+  && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* \
+  && curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash - \
+  && apt-get install nodejs -y --no-install-recommends
 
 # Set the locale
 ENV LANG C.UTF-8
