automation proxy: set privileged true
without privileged true, we will not be able to configure ip tables rules

--- a/docker_build/daemonset.yaml
+++ b/docker_build/daemonset.yaml
@@ -35,11 +35,11 @@ spec:
         # args: ["-D","-e"]
         # command: ["sleep"]
         # args: ["1d"]
-        # securityContext:
+        securityContext:
+          privileged: true
         #   capabilities:
         #     add: ["NET_ADMIN"]
         #   allowPrivilegeEscalation: true
-        #   privileged: true
         ports:
           - containerPort: 2222
             hostPort: 2222
