helper: fix k8s deploy automation proxy
fix deploy automation proxy by adding better wait for pod to be ready

--- a/docker_build/daemonset.yaml
+++ b/docker_build/daemonset.yaml
@@ -4,14 +4,17 @@ metadata:
   name: automation-proxy
   labels:
     k8s-app: ssh
+    app: automation-proxy
 spec:
   selector:
     matchLabels:
       name: automation-proxy
+      app: automation-proxy
   template:
     metadata:
       labels:
-        name: automation-proxy         
+        name: automation-proxy
+        app: automation-proxy
     spec:
       hostname: automation-proxy
       restartPolicy: Always
