--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -25,7 +25,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   && pip3 install --upgrade pip \
   && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* \
   && curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash - \
-  && apt-get install nodejs -y --no-install-recommends
+  && apt-get install nodejs -y --no-install-recommends \
+  && curl -L https://github.com/rancher/rke/releases/download/v1.1.3/rke_linux-amd64 -o /tmp/rke \
+  && chmod +x /tmp/rke && mv /tmp/rke /usr/local/bin/
+
 
 # Set the locale
 ENV LANG C.UTF-8
