--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -21,13 +21,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     sshpass \
     openssh-client \
     git \
+    apt-transport-https \
+    gnupg2 \
   && ln -s /usr/bin/python3 /usr/local/bin/python \
   && pip3 install --upgrade pip \
   && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* \
   && curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash - \
   && apt-get install nodejs -y --no-install-recommends \
   && curl -L https://github.com/rancher/rke/releases/download/v1.1.3/rke_linux-amd64 -o /tmp/rke \
-  && chmod +x /tmp/rke && mv /tmp/rke /usr/local/bin/
+  && chmod +x /tmp/rke && mv /tmp/rke /usr/local/bin/ \
+  && curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add - \
+  && echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list \
+  && apt-get update && apt-get install -y kubectl
 
 
 # Set the locale
