host: add rsync interface to rsync files from fs to host.
This interface is better to "manual" usage when we actually reuse the VM
to sync manually built binaries to the container

--- a/docker_build/Dockerfile
+++ b/docker_build/Dockerfile
@@ -18,6 +18,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
     libxrender-dev \
     python3-pip \
     iproute2 \
+    rsync \
     && curl -sL https://deb.nodesource.com/setup_10.x | bash \
     && apt-get install -y nodejs \
     && rm -rf /var/lib/apt/lists/*
