--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -24,6 +24,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     apt-transport-https \
     gnupg2 \
     iproute2 \
+    rsync \
   && ln -s /usr/bin/python3 /usr/local/bin/python \
   && pip3 install --upgrade pip \
   && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* \
