Jenkinsfile: updated SetConnection (create hardware.yaml) step
We now support vm_id and resource_manager_ep params in with make
command..

--- a/Makefile-env
+++ b/Makefile-env
@@ -2,6 +2,8 @@ ROOT_DIR:=$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 PARENT_ROOT_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST)))/..)
 OS ?= $(shell hostnamectl status | grep "Operating System" | cut -d ':' -f 2 | sed 's/ //' | cut -d ' ' -f 1 | awk '{print tolower($$1)}')
 
+.PHONY: set-jenkins-connection-file
+set-jenkins-connection-file:
 .PHONY: set-connection-file
 set-connection-file:
 include $(ROOT_DIR)/dev_environment/makefiles/Makefile.hardware
