--- a/hwprovisioner/allocate/webapp/swagger/allocate.yml
+++ b/hwprovisioner/allocate/webapp/swagger/allocate.yml
@@ -6,37 +6,6 @@ info:
   description: >-
     A service which allocates resources (servers, VMs, devices) for developers
 paths:
-  /claim:
-    post:
-      tags: [Jobs]
-      operationId: webapp.claim.claim
-      summary: Adds a job to the queue
-      requestBody:
-        description: job info
-        content:
-          application/json:
-            schema:
-              properties:
-                resourcemanager_id:
-                  type: string
-                  example: "1234"
-                inventory_id:
-                  type: string
-                  example: "1234"
-                allocation_id:
-                  type: string
-                  example: "1234"
-      responses:
-        200:
-          description: Return all items from the inventory
-          content:
-            application/json:
-              schema:
-                properties:
-                  status:
-                    type: integer
-                    description: The status for the operation
-                    example: 200
   /jobs:
     get:
       tags: [Jobs]
@@ -84,7 +53,7 @@ paths:
     get:
       tags: [Jobs]
       operationId: webapp.jobs.onejob
-      summary: Get all jobs from the inventory
+      summary: Get one job from the inventory
       parameters:
         - name: allocation_id
           in: path
@@ -114,39 +83,6 @@ paths:
       responses:
         200:
           description: Return all jobs from the inventory
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  allocation_id:
-                    type: string
-                  demands:
-                    type: string
-  /ws/resourcemanager/{resourcemanager_id}/{inventory_id}:
-    get:
-      tags: [Prospector]
-      operationId: webapp.resourcemanager.volunteer_sub
-      summary: >-
-        websocket for listening to an inventory queue
-      parameters:
-        - name: resourcemanager_id
-          in: path
-          description: the rm id
-          required: true
-          schema:
-            type: string
-            format: uuid
-        - name: inventory_id
-          in: path
-          description: the inv id
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        200:
-          description: Operation success indicator
           content:
             application/json:
               schema:
@@ -192,49 +128,3 @@ paths:
                   status:
                     type: integer
                     example: 200
-
-  /resourcemanager/{resourcemanager_id}:
-    post:
-      tags: [Prospector]
-      operationId: webapp.resourcemanager.volunteer
-      summary: >-
-        Allows a resource manager to volunteer one or more of its resources for jobs
-      parameters:
-        - name: resourcemanager_id
-          in: path
-          description: The resource manager id
-          required: true
-          schema:
-            type: string
-            format: uuid
-      requestBody:
-        description: an array of matches to volunteer
-        content:
-          application/json:
-            schema:
-              properties:
-                data:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      state:
-                        type: string
-                      allocation_id:
-                        type: string
-                      demands:
-                        type: string
-      responses:
-        200:
-          description: Operation success indicator
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  state:
-                    type: string
-                  allocation_id:
-                    type: string
-                  demands:
-                    type: string
