Revert "set automation_proxy log level to DEBUG3"
This reverts commit 4c7c9aaa0601c965a250c4673b4b6d55375d89c1.

--- a/docker_build/Dockerfile
+++ b/docker_build/Dockerfile
@@ -39,8 +39,7 @@ RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/
     && sed -i 's/#MaxStartups.*/MaxStartups 512:30:1024/' /etc/ssh/sshd_config \
     && sed -i 's/#MaxSessions.*/MaxSessions 1024/' /etc/ssh/sshd_config \
     # SSH login fix. Otherwise user is kicked off after login
-    && sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd \
-    && sed -i 's/#LogLevel INFO/LogLevel DEBUG3/' /etc/ssh/sshd_config
+    && sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 
 # run as a different user
 
