automation proxy: consume container by hash and not by name
Currently we are always running automatin proxy container as master.
This leads to several issues:
1) we cannot add and test something in the container without "pushing"
to master
2) on older versions of the product we will always consume the latest
automation proxy, which might not even work.

The solution is to allow and locally build automation proxy and use it
according to its contents and not by "single" master name.

--- a/docker_build/Jenkinsfile
+++ b/docker_build/Jenkinsfile
@@ -47,6 +47,10 @@ pipeline {
             }               
             steps {
                 script {
+                    dir('docker_build'){
+                       image_tag=sh(returnStdout: true, script: "./version.sh").trim()
+                       containerLib.push_container('anyvision-training', img, image_tag)
+                    }
                     containerLib.push_container('anyvision-training', img, BRANCH_NAME)
                 }
             }
