automation proxy: make automation proxy docker to compile.
Currently automation proxy does not compile as by default it uses
outdated version of pip this causes python opencv not to build.
The fix is to manually update pip package before performing pip install

--- a/docker_build/Dockerfile
+++ b/docker_build/Dockerfile
@@ -54,6 +54,7 @@ RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/
 
 # Install pip3 requirements.txt
 ADD requirements.txt  /home/user/requirements.txt
+RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install -r /home/user/requirements.txt
 
 # Configure npm registry
