ssh_direct: added compress method
This uses a combination of pigz and tar to compress any src folders into
a dst tar.gz file.
Will be used to compress logs before downloading them to HRT because
they have gotten too massive.

--- a/docker_build/Dockerfile
+++ b/docker_build/Dockerfile
@@ -19,6 +19,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
     python3-pip \
     iproute2 \
     rsync \
+    pigz \
     && curl -sL https://deb.nodesource.com/setup_10.x | bash \
     && apt-get install -y nodejs \
     && rm -rf /var/lib/apt/lists/*
