--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
+    restart: always
     ports:
       - 6379:6379
     command: [sh, -c, "rm -f /data/dump.rdb && redis-server"]  # disable persistence
