--- a/requirements3.txt
+++ b/requirements3.txt
@@ -97,7 +97,8 @@ redis==3.5.3
 websocket-client==0.57.0
 pdbpp
 retry==0.9.2
-Flask==1.0.2
 flask
 paho-mqtt==1.5.1
 schedule==1.0.0
+kubernetes==12.0.1
+gossip==2.4.0
